--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "eslint-plugin-import": "^2.12.0",
     "eslint-plugin-react": "^7.8.2",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "prop-types": "^15.7.2",
     "stylelint": "9.3.0"
   }
 }
