--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@types/react": "^17.0.2",
     "@types/webpack-env": "^1.13.6",
     "babel-preset-taro": "3.2.12",
+    "dayjs": "^1.10.6",
     "eslint": "^6.8.0",
     "eslint-config-taro": "3.2.12",
     "eslint-plugin-import": "^2.12.0",
