--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "dev:rn": "npm run build:rn -- --watch",
     "dev:qq": "npm run build:qq -- --watch",
     "dev:jd": "npm run build:jd -- --watch",
-    "dev:quickapp": "npm run build:quickapp -- --watch"
+    "dev:quickapp": "npm run build:quickapp -- --watch",
+    "server": "node ./server/index.js"
   },
   "browserslist": [
     "last 3 versions",
@@ -44,6 +45,7 @@
     "dva": "^2.4.1",
     "dva-core": "^2.0.4",
     "dva-loading": "^3.0.22",
+    "express": "^4.17.1",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "react-redux": "^7.2.4"
