--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.8.0",
+    "@babel/eslint-parser": "^7.15.0",
     "@tarojs/mini-runner": "3.2.12",
     "@tarojs/webpack-runner": "3.2.12",
     "@types/react": "^17.0.2",
@@ -64,8 +65,8 @@
     "eslint-plugin-import": "^2.12.0",
     "eslint-plugin-react": "^7.8.2",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "husky": "^7.0.1",
-    "lint-staged": "^11.1.2",
+    "husky": "^4.2.3",
+    "lint-staged": "^8.0.3",
     "mysql": "^2.18.1",
     "prop-types": "^15.7.2",
     "stylelint": "9.3.0",
