--- a/package.json
+++ b/package.json
@@ -1,87 +1,89 @@
 {
-	"name": "taro-express-mysql-combat",
-	"version": "1.0.0",
-	"private": true,
-	"description": "taro3实现完整出行OTA项目，Express写服务端，Mysql数据库，兼容四大端小程序以及H5",
-	"templateInfo": {
-		"name": "default",
-		"typescript": false,
-		"css": "sass"
-	},
-	"scripts": {
-		"build:weapp": "taro build --type weapp",
-		"build:swan": "taro build --type swan",
-		"build:alipay": "taro build --type alipay",
-		"build:tt": "taro build --type tt",
-		"build:h5": "taro build --type h5",
-		"build:rn": "taro build --type rn",
-		"build:qq": "taro build --type qq",
-		"build:jd": "taro build --type jd",
-		"build:quickapp": "taro build --type quickapp",
-		"dev:weapp": "npm run build:weapp -- --watch",
-		"dev:swan": "npm run build:swan -- --watch",
-		"dev:alipay": "npm run build:alipay -- --watch",
-		"dev:tt": "npm run build:tt -- --watch",
-		"dev:h5": "npm run build:h5 -- --watch",
-		"dev:rn": "npm run build:rn -- --watch",
-		"dev:qq": "npm run build:qq -- --watch",
-		"dev:jd": "npm run build:jd -- --watch",
-		"dev:quickapp": "npm run build:quickapp -- --watch",
-		"server": "nodemon ./server/index.js",
-		"lint": "eslint --ext .js,.tsx,.ts,.jsx src"
-	},
-	"browserslist": [
-		"last 3 versions",
-		"Android >= 4.1",
-		"ios >= 8"
-	],
-	"author": "",
-	"dependencies": {
-		"@babel/runtime": "^7.7.7",
-		"@tarojs/components": "3.3.3",
-		"@tarojs/react": "3.3.3",
-		"@tarojs/runtime": "3.3.3",
-		"@tarojs/taro": "3.3.3",
-		"dva": "^2.4.1",
-		"dva-core": "^2.0.4",
-		"dva-loading": "^3.0.22",
-		"express": "^4.17.1",
-		"react": "^17.0.0",
-		"react-dom": "^17.0.0",
-		"react-redux": "^7.2.4"
-	},
-	"devDependencies": {
-		"@babel/core": "^7.8.0",
-		"@babel/eslint-parser": "^7.15.0",
-		"@tarojs/mini-runner": "3.3.3",
-		"@tarojs/webpack-runner": "3.3.3",
-		"@types/react": "^17.0.2",
-		"@types/webpack-env": "^1.13.6",
-		"babel-preset-taro": "3.3.3",
-		"body-parser": "^1.19.0",
-		"dayjs": "^1.10.6",
-		"eslint": "^7.18.0",
-		"eslint-config-taro": "3.3.3",
-		"eslint-plugin-import": "^2.12.0",
-		"eslint-plugin-react": "^7.8.2",
-		"eslint-plugin-react-hooks": "^4.2.0",
-		"husky": "^4.2.3",
-		"lint-staged": "^8.0.3",
-		"mysql": "^2.18.1",
-		"prop-types": "^15.7.2",
-		"stylelint": "9.3.0",
-		"taro-ui": "^3.0.0-alpha.3",
-		"typescript": "^4.3.5"
-	},
-	"husky": {
-		"hooks": {
-			"pre-commit": "lint-staged"
-		}
-	},
-	"lint-staged": {
-		"*.{js,ts,tsx,jsx}": [
-			"eslint --quiet --cache --fix",
-			"git add"
-		]
-	}
+  "name": "taro-express-mysql-combat",
+  "version": "1.0.0",
+  "private": true,
+  "description": "taro3实现完整出行OTA项目，Express写服务端，Mysql数据库，兼容四大端小程序以及H5",
+  "templateInfo": {
+    "name": "default",
+    "typescript": false,
+    "css": "sass"
+  },
+  "scripts": {
+    "build:weapp": "taro build --type weapp",
+    "build:swan": "taro build --type swan",
+    "build:alipay": "taro build --type alipay",
+    "build:tt": "taro build --type tt",
+    "build:h5": "taro build --type h5",
+    "build:rn": "taro build --type rn",
+    "build:qq": "taro build --type qq",
+    "build:jd": "taro build --type jd",
+    "build:quickapp": "taro build --type quickapp",
+    "dev:weapp": "npm run build:weapp -- --watch",
+    "dev:swan": "npm run build:swan -- --watch",
+    "dev:alipay": "npm run build:alipay -- --watch",
+    "dev:tt": "npm run build:tt -- --watch",
+    "dev:h5": "npm run build:h5 -- --watch",
+    "dev:rn": "npm run build:rn -- --watch",
+    "dev:qq": "npm run build:qq -- --watch",
+    "dev:jd": "npm run build:jd -- --watch",
+    "dev:quickapp": "npm run build:quickapp -- --watch",
+    "server": "nodemon ./server/index.js",
+    "lint": "eslint --ext .js,.tsx,.ts,.jsx src"
+  },
+  "browserslist": [
+    "last 3 versions",
+    "Android >= 4.1",
+    "ios >= 8"
+  ],
+  "author": "",
+  "dependencies": {
+    "@babel/runtime": "^7.7.7",
+    "@tarojs/components": "3.3.3",
+    "@tarojs/react": "3.3.3",
+    "@tarojs/runtime": "3.3.3",
+    "@tarojs/taro": "3.3.3",
+    "dva": "^2.4.1",
+    "dva-core": "^2.0.4",
+    "dva-loading": "^3.0.22",
+    "express": "^4.17.1",
+    "react": "^17.0.0",
+    "react-dom": "^17.0.0",
+    "react-redux": "^7.2.4"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.8.0",
+    "@babel/eslint-parser": "^7.15.0",
+    "@tarojs/mini-runner": "3.3.3",
+    "@tarojs/webpack-runner": "3.3.3",
+    "@types/react": "^17.0.2",
+    "@types/webpack-env": "^1.13.6",
+    "axios": "^0.21.1",
+    "babel-preset-taro": "3.3.3",
+    "body-parser": "^1.19.0",
+    "dayjs": "^1.10.6",
+    "eslint": "^7.18.0",
+    "eslint-config-taro": "3.3.3",
+    "eslint-plugin-import": "^2.12.0",
+    "eslint-plugin-react": "^7.8.2",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "husky": "^4.2.3",
+    "lint-staged": "^8.0.3",
+    "mysql": "^2.18.1",
+    "prop-types": "^15.7.2",
+    "stylelint": "9.3.0",
+    "taro-skeleton": "^2.0.3",
+    "taro-ui": "^3.0.0-alpha.3",
+    "typescript": "^4.3.5"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.{js,ts,tsx,jsx}": [
+      "eslint --quiet --cache --fix",
+      "git add"
+    ]
+  }
 }
