--- a/project.config.json
+++ b/project.config.json
@@ -2,7 +2,7 @@
   "miniprogramRoot": "./dist",
   "projectname": "taro-express-mysql-combat",
   "description": "taro3实现完整出行OTA项目，Express写服务端，Mysql数据库，兼容四大端小程序以及H5",
-  "appid": "touristappid",
+  "appid": "wxf79e560d93972614",
   "setting": {
     "urlCheck": true,
     "es6": false,
