--- a/package.json
+++ b/package.json
@@ -60,12 +60,14 @@
     "axios": "^0.21.1",
     "babel-preset-taro": "3.3.3",
     "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.5",
     "dayjs": "^1.10.6",
     "eslint": "^7.18.0",
     "eslint-config-taro": "3.3.3",
     "eslint-plugin-import": "^2.12.0",
     "eslint-plugin-react": "^7.8.2",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "express-session": "^1.17.2",
     "husky": "^4.2.3",
     "lint-staged": "^8.0.3",
     "mysql": "^2.18.1",
