--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "mysql2": "^2.3.0",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
-    "react-redux": "^7.2.4"
+    "react-redux": "7.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.0",
