--- a/jsconfig.json
+++ b/jsconfig.json
@@ -7,9 +7,9 @@
       "@/common/*": ["./src/common/*"],
     }
   },
-  // "include": [
-  //   "src/**/*"
-  // ],
+  "include": [
+    "src/**/*"
+  ],
   // "exclude": [
   //   "node_modules",
   //   "dist"
